[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Melee/Melee.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 20 )

[node name="Melee" type="Node2D"]
script = ExtResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Reload" type="Timer" parent="."]
one_shot = true

[node name="AimLine" type="Line2D" parent="."]
z_index = 5
z_as_relative = false
width = 20.0
default_color = Color( 1, 1, 1, 0.705882 )
texture_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2( 60, 0.664 )
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
